--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,15 +17,33 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".Main.MainActivity"></activity>
-        <activity android:name=".Main.Find.JD_Tuiguang"></activity>
-        <activity android:name=".Main.Publish.FD_Leixing"></activity>
-        <activity android:name=".Main.Find.JD_Main"></activity>
-        <activity android:name=".Main.Find.JD_Xiangxi"></activity>
-        <activity android:name=".Main.Find.JD_Jx"></activity>
-        <activity android:name=".Main.Publish.FD_Xiangxi"></activity>
-        <activity android:name=".Main.Mine.Indent.Mai_Jd_Digdan"></activity>
-        <activity android:name=".Main.Mine.Indent.Mai_Fd_Dingdan"></activity>
+        <activity
+            android:name=".Main.MainActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".Main.Find.JD_Tuiguang"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".Main.Publish.FD_Leixing"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".Main.Find.JD_Main"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".Main.Find.JD_Xiangxi"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".Main.Find.JD_Jx"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".Main.Publish.FD_Xiangxi"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".Main.Mine.Indent.Mai_Jd_Digdan"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".Main.Mine.Indent.Mai_Fd_Dingdan"
+            android:screenOrientation="portrait"></activity>
         <activity android:name=".Main.Login.Welcome">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -33,8 +51,15 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".Main.Mine.Indent.Mai_Jd_Zhbd"></activity>
-        <activity android:name=".Main.Mine.Indent.Mai_Jd_Zhbd_Tj"></activity>
+        <activity
+            android:name=".Main.Mine.Indent.Mai_Jd_Zhbd"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".Main.Mine.Indent.Mai_Jd_Zhbd_Tj"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".Main.Mine.Indent.Particular.Jd_Dd_Jyz"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
