--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,6 @@ dependencies {
     compile 'com.github.valuesfeng:androidpicturepicker:1.0.0'
     //picasso
     compile 'com.squareup.picasso:picasso:2.5.2'
+    //加载
+    compile 'com.wang.avi:library:2.1.3'
 }
