--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ allprojects {
         maven {
             url "http://dl.bintray.com/nuptboyzhb/maven"
         }
+        maven { url 'https://maven.google.com' }
+
     }
 }
 
