--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,6 +91,10 @@
             android:screenOrientation="portrait">
         </activity>
         <activity
+            android:name=".Main.Login.SignUp"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
             android:name=".Main.Mine.Other.Setting"
             android:screenOrientation="portrait">
         </activity>
@@ -108,6 +112,10 @@
         </activity>
         <activity
             android:name=".Main.Mine.Other.InCome"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".Main.Mine.Other.Deal"
             android:screenOrientation="portrait">
         </activity>
         <!--图片剪裁Activity-->
