--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,6 @@ dependencies {
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.4.0'
     //工具包
     compile 'com.blankj:utilcode:1.7.1'
+    //material-dialogs
+    compile 'com.afollestad.material-dialogs:core:0.9.6.0'
 }
