--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="efan.com.money">
 
     <!--网络权限-->
@@ -19,9 +20,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <!--66pay-->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:name=".Main.MainApplication"
@@ -29,7 +28,8 @@
         android:icon="@mipmap/tubiao"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        tools:replace="icon,label,theme">
         <activity
             android:name=".Main.MainActivity"
             android:screenOrientation="portrait">
@@ -106,6 +106,7 @@
         <activity
             android:name=".Main.TestActivity"
             android:screenOrientation="portrait">
+
         </activity>
         <activity
             android:name=".Main.Mine.Other.Identity"
