--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,22 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url "https://jitpack.io"
+        }
+        maven {
+            url "http://dl.bintray.com/nuptboyzhb/maven"
+        }
+        maven { url 'https://maven.google.com' }
+        maven {
+            url "http://mvn.mob.com/android"
+        }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.1'
+        classpath "com.mob.sdk:MobSDK:+"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -22,6 +34,9 @@ allprojects {
             url "http://dl.bintray.com/nuptboyzhb/maven"
         }
         maven { url 'https://maven.google.com' }
+        maven {
+            url "http://mvn.mob.com/android"
+        }
 
     }
 }
